# claude-code-camp-2026-Q2

./: .gitignore
.boukensha/: .env.example  settings.yaml  settings.yaml.example
.boukensha/goals/: dummy.md
.boukensha/maps/: dummy.json
.boukensha/memory/: player.md  world.md
.boukensha/sessions/: 20260720T190922Z-de5d2bb8.jsonl
docs/: explore_architecture.md
docs/journal/: 0_preweek.md  1_baseline.md  readme.md
docs/superpowers/plans/: 2026-07-21-python-mud-tools.md
week0_explore/explore_architecture/001_playing_agent/: CLAUDE.md
week0_explore/explore_architecture/001_playing_agent/data/: player.md  world.md
week0_explore/explore_architecture/01_playing_agent/docs/: ai-summary.md
week1_baseline/python/00_config/: 00_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/00_config/examples/: example.py
week1_baseline/python/00_config/src/boukensha/: __init__.py
week1_baseline/python/01_struct_skeleton/: 01_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/01_struct_skeleton/examples/: example.py
week1_baseline/python/01_struct_skeleton/src/boukensha/: __init__.py  config.py  context.py
week1_baseline/python/02_the_registry/: 02_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/03_prompt_builder/: 03_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/04_api_client/: 04_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/04_api_client/examples/: example.py
week1_baseline/python/04_api_client/src/boukensha/: __init__.py  client.py
week1_baseline/python/04_api_client/src/boukensha/backends/: ollama_cloud.py  openai.py
week1_baseline/python/04_api_client/src/boukensha/tasks/: base.py
week1_baseline/python/04_api_client/tests/: test_client.py
week1_baseline/python/05_agent_loop/: 05_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/06_the_logger/: 06_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/07_the_run_dsl/: 07_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/07_the_run_dsl/examples/: example.py
week1_baseline/python/07_the_run_dsl/src/boukensha/: __init__.py
week1_baseline/python/07_the_run_dsl/tests/: test_run_dsl.py
week1_baseline/python/08_the_repl_loop/: 08_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/09_global_executable/: 09_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/09_global_executable/src/: boukensha_loader.py
week1_baseline/python/09_global_executable/src/boukensha/: __init__.py  tool.py
week1_baseline/python/09_global_executable/tests/: test_boukensha_loader.py  test_console_script.py  test_quiet.py
week1_baseline/python/10_standard_tool_library/: 10_architecture.md  README.md  plan.md  pyproject.toml
week1_baseline/python/10_standard_tool_library/src/: boukensha_loader.py
week1_baseline/python/10_standard_tool_library/src/boukensha/: __init__.py  agent.py  context.py  registry.py
week1_baseline/python/10_standard_tool_library/src/boukensha/tools/: __init__.py  shell.py
week1_baseline/python/10_standard_tool_library/tests/: test_context.py  test_run_dsl.py  test_tools_file_system.py  test_tools_mud.py
week1_baseline/python/11_tui/: 11_architecture.md  pyproject.toml
week1_baseline/python/11_tui/examples/: example.py
week1_baseline/python/11_tui/src/: boukensha_loader.py
week1_baseline/python/11_tui/src/boukensha/: __init__.py  client.py  tui.py
week1_baseline/python/11_tui/src/boukensha/tasks/: base.py
week1_baseline/python/11_tui/src/boukensha/tools/: mud.py
week1_baseline/python/11_tui/tests/: test_logger.py  test_run_dsl.py
week1_baseline/python/12_context/: .gitignore  README.md  memory-plan.md  plan.md
week1_baseline/python/13_memory/: 13_architecture.md  README.md  manual.py  plan.md  pyproject.toml
week1_baseline/python/13_memory/examples/: example.py
week1_baseline/python/13_memory/prompts/: system.md
week1_baseline/python/13_memory/src/boukensha/: __init__.py  agent.py  client.py  context.py  logger.py  repl.py
week1_baseline/python/13_memory/src/boukensha/backends/: openai.py
week1_baseline/python/13_memory/src/boukensha/tools/: __init__.py  map.py  mud.py  shell.py  vitals.py
week1_baseline/python/13_memory/tests/: conftest.py  manual.py  test_agent.py  test_context.py  test_repl.py  test_tools_file_system.py  test_tools_map.py  test_tools_mud.py  test_vitals.py
(+74 files in other folders)
