[project]
name = "boukensha-global-executable"
version = "0.1.0"
description = "Boukensha global executable (Step 9)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boukensha"]
